@@ -2,4 +2,6 @@
 
 Při dosažení 6 objektů (možné nastavit jiný počet atributem "maxPocet") se první zadaný objekt zbarví do červena a při dalším tahu se smaže a další se nastaví na červeno.
 
-Zatím (nejspíš to ani nedodělám xd) není vyhodnocování, zda někdo vyhrál
+Po spojení 3 stejných znaků se objeví popup s možností hrát znovu. Při kliknutí na cancel se program zeptá, zda chce uživatel zavřít program.
+
+Pro používání je potřeba mít nainstalovanou JavaFX17.0.10, ve VM Options změnit "--module-path "C:\Program Files\javafx-sdk-17.0.10\lib" --add-modules javafx.controls,javafx.fxml" na cestu ke své JavaFX knihovně. Tedy pozměnit jen tuto část textu: "C:\Program Files\javafx-sdk-17.0.10\lib" .
